--- a/charts/matrix/templates/synapse/deployment.yaml
+++ b/charts/matrix/templates/synapse/deployment.yaml
@@ -57,24 +57,24 @@ spec:
         {{- if .Values.postgresql.enabled }}
         - name: postgresql-isready
           image: {{ .Values.postgresql.image.repository }}:{{ .Values.postgresql.image.tag }}
-          env:
-            - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "matrix.postgresql.secretName" . }}
-                  key: {{ .Values.postgresql.global.postgresql.auth.secretKeys.databaseUsername }}
-            - name: DATABASE_HOSTNAME
-              value: {{ template "postgresql.v1.primary.fullname" .Subcharts.postgresql }}
-            {{- if .Values.postgresql.sslmode }}
-            - name: PGSSLMODE
-              value: {{ .Values.postgresql.sslmode }}
-            - name: PGSSLCERT
-              value: {{ .Values.postgresql.sslcert }}
-            - name: PGSSLKEY
-              value: {{ .Values.postgresql.sslkey }}
-            - name: PGSSLROOTCERT
-              value: {{ .Values.postgresql.sslrootcert }}
-            {{- end }}
+          # env:
+          #   - name: POSTGRES_USER
+          #     valueFrom:
+          #       secretKeyRef:
+          #         name: {{ include "matrix.postgresql.secretName" . }}
+          #         key: {{ .Values.postgresql.global.postgresql.auth.secretKeys.databaseUsername }}
+          #   - name: DATABASE_HOSTNAME
+          #     value: {{ template "postgresql.v1.primary.fullname" .Subcharts.postgresql }}
+          #   {{- if .Values.postgresql.sslmode }}
+          #   - name: PGSSLMODE
+          #     value: {{ .Values.postgresql.sslmode }}
+          #   - name: PGSSLCERT
+          #     value: {{ .Values.postgresql.sslcert }}
+          #   - name: PGSSLKEY
+          #     value: {{ .Values.postgresql.sslkey }}
+          #   - name: PGSSLROOTCERT
+          #     value: {{ .Values.postgresql.sslrootcert }}
+          #   {{- end }}
           command:
             - "sh"
             - "-c"
