--- a/charts/matrix/templates/synapse/deployment.yaml
+++ b/charts/matrix/templates/synapse/deployment.yaml
@@ -57,12 +57,12 @@ spec:
         {{- if .Values.postgresql.enabled }}
         - name: postgresql-isready
           image: {{ .Values.postgresql.image.repository }}:{{ .Values.postgresql.image.tag }}
-          # env:
-          #   - name: POSTGRES_USER
-          #     valueFrom:
-          #       secretKeyRef:
-          #         name: {{ include "matrix.postgresql.secretName" . }}
-          #         key: {{ .Values.postgresql.global.postgresql.auth.secretKeys.databaseUsername }}
+          env:
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "matrix.postgresql.secretName" . }}
+                  key: {{ .Values.postgresql.global.postgresql.auth.secretKeys.databaseUsername }}
           #   - name: DATABASE_HOSTNAME
           #     value: {{ template "postgresql.v1.primary.fullname" .Subcharts.postgresql }}
           #   {{- if .Values.postgresql.sslmode }}
