--- a/charts/matrix/templates/synapse/deployment.yaml
+++ b/charts/matrix/templates/synapse/deployment.yaml
@@ -63,8 +63,8 @@ spec:
                 secretKeyRef:
                   name: {{ include "matrix.postgresql.secretName" . }}
                   key: {{ .Values.postgresql.global.postgresql.auth.secretKeys.databaseUsername }}
-          #   - name: DATABASE_HOSTNAME
-          #     value: {{ template "postgresql.v1.primary.fullname" .Subcharts.postgresql }}
+            - name: DATABASE_HOSTNAME
+              value: {{ template "postgresql.v1.primary.fullname" .Subcharts.postgresql }}
           #   {{- if .Values.postgresql.sslmode }}
           #   - name: PGSSLMODE
           #     value: {{ .Values.postgresql.sslmode }}
